<resources>
    <string name="app_name">PhotoGallery</string>
    <string name="title_activity_add_photo">AddPhotoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="choose_photo">choose photo</string>
    <string name="add_title_for_photo">Add title for photo</string>
    <string name="image">image</string>
    <string name="title_activity_photo_item">PhotoItemActivity</string>
</resources>