<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B463C">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image">

    </ImageView>

    <Button
        android:id="@+id/addPhotoButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:backgroundTint="#F4F1E9"
        android:text="@string/choose_photo"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="20dp">

    </Button>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="#FFC107"


        app:layout_constraintTop_toBottomOf="@+id/addPhotoButton"
        tools:layout_editor_absoluteX="20dp">

        <EditText
            android:id="@+id/addTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/add_title_for_photo"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:autofillHints=" "
            android:inputType="">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="20dp"
        android:background="#36574B"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="20dp">

        <EditText
            android:id="@+id/addDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/description"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:autofillHints=""
            android:inputType="">

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:backgroundTint="#2B463C"
        android:textColor="@color/white"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>